tests/tests/legacy_kustomizations/pipelines-ui/test_data/expected/networking.istio.io_v1alpha3_virtualservice_ml-pipeline-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/component: pipelines-ui
    app.kubernetes.io/instance: pipelines-ui-0.2.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: pipelines-ui
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.0
  name: ml-pipeline-ui
  namespace: kubeflow
spec:
  gateways:
  - istio-system/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /pipeline
    rewrite:
      uri: /pipeline
    route:
    - destination:
        host: ml-pipeline-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
